Add a hard dependency to JTS for demonstration purpose only.