@@ -31,5 +31,6 @@ java -splash:"%BASE_DIR%\lib\logo.jpg"^
  -Djava.util.logging.config.class=org.apache.sis.util.logging.Initializer^
  -Djava.util.logging.config.file="%BASE_DIR%\conf\logging.properties"^
  -Dderby.stream.error.file="%BASE_DIR%\log\derby.log"^
+ --add-modules org.locationtech.jts^
  --module org.apache.sis.gui/org.apache.sis.gui.DataViewer^
  %SIS_OPTS%
